--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <table style="width: 100%; margin-top: 20px; background-color: #D9D9D945; max-width: 600px; margin: 0 auto; border-collapse: collapse; font-family: 'Poppins', sans-serif;">
+    <table style="width: 100%; margin-top: 20px; background-color: #D9D9D945; max-width: 744px; margin: 0 auto; border-collapse: collapse; font-family: 'Poppins', sans-serif;">
         <tr>
             <td style="padding: 20px; text-align: left;">
                 <!-- Add Cloudinary Image -->
@@ -21,36 +21,60 @@
                 </table>
                 <!-- Email Content -->
                 <table style="width: 100%; color: #211D1D;">
+                  
                     <tr>
-                        <td style="font-size: 30px; font-weight:500; padding-bottom: 17px;">
-                            Password Reset
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="font-size: 16px; font-weight: 300; padding-bottom: 10px;">
-                            We've received a request to reset the password for this user account.
+                        <td style="font-size: 16px; font-weight: 300; padding-bottom: 20px;">
+                            Subject: Order Received – Repair Process Initiated (Order No: [#ORDER12345])
                         </td>
                     </tr>
                     <tr>
                         <td style="font-size: 16px; padding-bottom: 20px; font-weight: 300;">
-                            If this was you, kindly click the reset password button to continue.
+                            Dear [Client's Name],
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding-bottom: 10px; margin-top: 20px;">
-                            <a href="#" style="display: inline-block; padding: 10px 20px; background-color: #FFCC29; color: #211D1D; text-decoration: none; border-radius: 10px; display: flex; align-items: center; justify-items: center; width: fit-content; margin: 0 auto; font-size: 16px;">
-                                Reset my Password
-                            </a>
+                        <td style="font-size: 16px; padding-bottom: 20px; font-weight: 300;">
+                            Thank you for choosing abtechcare for your gadget repair needs.
                         </td>
                     </tr>
                     <tr>
                         <td style=" padding-top: 20px; padding-bottom: 10px;">
-                            If you didn't ask to reset your password, you can ignore this email.
+                            We are pleased to inform you that we have received your repair request. Your Order Number is: [#ORDER12345]. Please keep this number safe, as it will be used for tracking your repair status on our website.
+                          </td>
+                    </tr>
+                    <tr>
+                        <td style=" padding-top: 20px; padding-bottom: 10px;">
+                            A member of our logistics team will contact you shortly to arrange the pickup of your gadget. Once we receive the item and carry out a thorough diagnosis, we will send you a follow-up email detailing the repair cost and next steps.
                         </td>
                     </tr>
                     <tr>
-                        <td style="font-size: 16px; padding-bottom: 10px;">
-                            Thanks,<br>AbTechCare
+                        <td style=" padding-top: 20px; padding-bottom: 20px;">
+                            If you have any questions, feel free to reach out to us via this email or call our support line (+234 916 870 1802).
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="font-size: 16px; padding-bottom: 2px;">
+                            Best regards,
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="font-size: 16px; padding-bottom: 2px;">
+                            Adeola
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="font-size: 16px; padding-bottom: 2px;">
+                            Customer Service Representative
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="font-size: 16px; padding-bottom: 2px;">
+                            abtechcare
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="font-size: 16px; padding-bottom: 2px;">
+                            +234 916 870 1802 | support@abtechcare.com | abtechcare.com
                         </td>
                     </tr>
                 </table>
